[package]
name = "merino"
version = "0.1.3"
description = "A SOCKS5 Proxy server written in Rust"
repository = "https://github.com/ajmwagar/merino"
readme = "README.md"
license = "MIT"
authors = ["Avery Wagar <ajmw.subs@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = 3
lto = true

[dependencies]
csv = "1.3.0"
serde = "1.0.197"
serde_derive = "1.0.197"
snafu = "0.7.5"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["local-time", "env-filter"] }
